-fix the overflow issue by adding 100vh on the body and not on main

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 main {
-  @apply flex min-h-screen flex-col items-center justify-center bg-gradient-to-b from-[#2e026d] to-[#15162c] text-white
+  @apply flex h-full flex-col items-center justify-center bg-gradient-to-b from-[#2e026d] to-[#15162c] text-white
 }
